--- a/src/app/admin/gst/gst.component.html
+++ b/src/app/admin/gst/gst.component.html
@@ -40,7 +40,7 @@
 
           <ng-container matColumnDef="Action">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-            <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editGst(row)">edit</mat-icon></td>
+            <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editGst(row)">edit</mat-icon>  <mat-icon (click)="del_gst(row)">delete</mat-icon></td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
