--- a/src/app/admin/unit/unit.component.html
+++ b/src/app/admin/unit/unit.component.html
@@ -28,7 +28,9 @@
           </ng-container>
           <ng-container matColumnDef="Action">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-            <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editunit(row)">edit</mat-icon></td>
+            <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editunit(row)">edit</mat-icon>
+              <mat-icon (click)="del_unit(row)">delete</mat-icon>   
+            </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
