--- a/src/app/admin/purchase-cancel/purchase-cancel.component.html
+++ b/src/app/admin/purchase-cancel/purchase-cancel.component.html
@@ -3,7 +3,7 @@
     <span class="notice_text">Purchase Cancel Details :</span>
   </div>
   <div class="count_search">
-    <span class="notice_tex"> Total :</span>
+    <span class="notice_tex"> Total : {{purch_total}}</span>
     <div class="search">
       <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
     </div>
