--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -96,6 +96,10 @@
             <mat-icon>local_grocery_store</mat-icon>
             <span>Sale</span>
         </button>
+        <button mat-button class="menu-button" routerLink="/stock_report" routerLinkActive="active">
+            <mat-icon>local_grocery_store</mat-icon>
+            <span>Stock </span>
+        </button>
         <button mat-button class="menu-button" routerLink="/dues" routerLinkActive="active">
             <mat-icon>payment</mat-icon>
             <span>Dues</span>
@@ -128,12 +132,7 @@
                 <button mat-button class="menu-button" routerLink="/sale_report" routerLinkActive="active">
                     <mat-icon> local_offer </mat-icon>
                     <span>Sale Report </span>
-                </button>
-                <button mat-button class="menu-button" routerLink="/stock_report" routerLinkActive="active">
-                    <mat-icon>local_grocery_store</mat-icon>
-                    <span>Stock Report </span>
-                </button>
-              
+                </button>              
                 <button mat-button class="menu-button" routerLink="/purchase_cancel" routerLinkActive="active">
                     <mat-icon> cancel </mat-icon>
                     <span>Purchase Cancel </span>
