--- a/src/app/admin/add-edit-expense/add-edit-expense.component.html
+++ b/src/app/admin/add-edit-expense/add-edit-expense.component.html
@@ -12,6 +12,7 @@
                     <mat-option value="Electricity Bill">Electricity Bill</mat-option>
                     <mat-option value="Mobile Recharge">Mobile Recharge</mat-option>
                     <mat-option value="Rent">Rent</mat-option>
+                    <mat-option value="breakfast">breakfast</mat-option>
                     <mat-option value="Other">Other</mat-option>
                 </mat-select>
             </mat-form-field>
