--- a/src/app/admin/reciept/reciept.component.html
+++ b/src/app/admin/reciept/reciept.component.html
@@ -3,7 +3,7 @@
     <span class="notice_text">Reciept Details</span>
   </div>
   <div class="count_search">
-    <span class="notice_text"> Total :</span>
+    <span class="notice_text"> Total : {{recived_total}}</span>
     <div class="search">
       <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
     </div>
