--- a/src/app/admin/dues/dues.component.html
+++ b/src/app/admin/dues/dues.component.html
@@ -3,7 +3,7 @@
     <span class="notice_text">Dues Details</span>
   </div>
   <div class="count_search">
-    <span class="notice_text"> Total :</span>
+    <span class="notice_text"> Total : {{dues_count}}</span>
     <div class="search">
       <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
     </div>
