--- a/src/app/admin/employee/employee.component.html
+++ b/src/app/admin/employee/employee.component.html
@@ -5,7 +5,7 @@
    
   </div>
   <div class="count_search">
-    <span class="notice_text"> Total :</span>
+    <span class="notice_text"> Total : {{total_emp}}</span>
     <div class="search">
       <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
     </div>
@@ -48,7 +48,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
+            <td class="mat-cell" colspan="7">No data show"{{input.value}}"</td>
           </tr>
         </table>
         <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
