--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -9,12 +9,12 @@
                 <form [formGroup]="LoginForm">
                 <mat-form-field class="example-full-width">
                     <mat-label>Username</mat-label>
-                    <input matInput placeholder="Enter your name" formControlName="username">
+                    <input matInput placeholder="Enter your name" formControlName="username" autocomplete="false">
                 </mat-form-field>
                 <mat-icon class="icon_2">lock</mat-icon>
                 <mat-form-field appearance="fill">
                     <mat-label>Enter your password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password" formControlName="password">
+                    <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password" formControlName="password" autocomplete="false">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
                         [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
