--- a/src/app/admin/add-edit-account/add-edit-account.component.html
+++ b/src/app/admin/add-edit-account/add-edit-account.component.html
@@ -17,11 +17,7 @@
             <mat-form-field appearance="fill">
                 <mat-label>Expense</mat-label>
                 <input formControlName="expense" matInput placeholder="Expense" type="number">
-            </mat-form-field><br>
-            <mat-form-field appearance="fill">
-                <mat-label>Remarks</mat-label>
-                <input formControlName="remarks" matInput placeholder="remarks">
-            </mat-form-field>         
+            </mat-form-field>    
         </div>
         <div class="column">
             <mat-form-field appearance="fill">
@@ -37,12 +33,13 @@
             <mat-form-field appearance="fill">
                 <mat-label>Date</mat-label>
                 <input formControlName="account_date" matInput placeholder="Date" type="date">
-            </mat-form-field><br>                  
-            <mat-form-field appearance="fill">
-                <mat-label>Description</mat-label>
-                <input formControlName="account_desc" matInput placeholder="Description">
-            </mat-form-field>
+            </mat-form-field><br>
         </div>      
+        
+        <div calss="full_txtbox">  <mat-form-field appearance="fill">
+            <mat-label>Description</mat-label>
+            <input formControlName="account_desc" matInput placeholder="Description">
+        </mat-form-field></div>
         <div mat-dialog-action [align]="'end'" id="main_button">
             <button mat-raised-button color="warn" (click)="resetaccount()" class="reset_btn">Reset</button>
             <button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
