--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -71,6 +71,11 @@
                         <span>Area</span>
                     </button>
 
+                    <button mat-button class="menu-button" routerLink="/expencetype" routerLinkActive="active">
+                        <mat-icon>local_grocery_store</mat-icon>
+                        <span>Expence Type</span>
+                    </button>
+
 
                 </div>
             </div>
@@ -112,11 +117,32 @@
             <mat-icon>monetization_on</mat-icon>
             <span>Expense</span>
         </button>
-        <button mat-button class="menu-button" routerLink="/account" routerLinkActive="active">
-            <mat-icon>account_circle</mat-icon>
-            <span>Account </span>
-        </button>
-        
+      
+        <!-- for account  -->
+        <div>
+            <button mat-button class="menu-button" (click)="AccountDropdown()">
+                <mat-icon>card_travel</mat-icon>
+                <span>Account</span>
+                <mat-icon [hidden]="action_icon5">chevron_right</mat-icon>
+                <mat-icon [hidden]="action_icon6">expand_more</mat-icon>
+    
+            </button>
+            <div style=" background-color:#14595c; color:whitesmoke;" id="dropdown_item2">
+                <button mat-button class="menu-button" routerLink="/account" routerLinkActive="active">
+                    <mat-icon>account_circle</mat-icon>
+                    <span>Ledger</span>
+                </button>
+                <button mat-button class="menu-button" routerLink="/profit" routerLinkActive="active">
+                    <mat-icon> local_offer </mat-icon>
+                    <span>Profit </span>
+                </button>  
+                <button mat-button class="menu-button" routerLink="/loss" routerLinkActive="active">
+                     <mat-icon> local_offer </mat-icon>
+                    <span>Loss </span>
+                </button>  
+             </div>
+        </div>
+        <!-- for report  -->
         <div>
             <button mat-button class="menu-button" (click)="report_dropdown()">
                 <mat-icon>card_travel</mat-icon>
