--- a/src/app/admin/add-edit-sale/add-edit-sale.component.html
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.html
@@ -54,7 +54,7 @@
 					</form>
 					<div mat-dialog-action [align]="'end'" id="main_button">
 						<button [hidden]="sale_action_btn" mat-raised-button (click)="AddCustomer()" class="add_btn"
-							type="submit" style="background-color: #0d5e58; color: white;"
+							type="submit" style="background-color: #0d5e58; color: white; width: 100px;"
 							[disabled]="!saleformcust.valid">{{actionBtn}}</button>
 					</div>
 				</div>
