--- a/src/app/admin/loss/loss.component.html
+++ b/src/app/admin/loss/loss.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
     <div class="view_notice">
-      <span class="notice_text">Profit</span>
+      <span class="notice_text">Loss</span>
     </div>
       <div class="count_search">
         <span class="notice_text"> Total : {{count}}</span>       
@@ -32,7 +32,7 @@
               </ng-container>
     
               <ng-container matColumnDef="profit">
-                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Profit</th>
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Loss</th>
                 <td class="data" mat-cell *matCellDef="let row">{{row.party_contact_person}}</td>
               </ng-container>
              
