--- a/src/app/admin/add-expencetype/add-expencetype.component.html
+++ b/src/app/admin/add-expencetype/add-expencetype.component.html
@@ -4,7 +4,7 @@
 </mat-toolbar>
 <div mat-dialog-content>
     <form [formGroup]="expencetypeform" novalidate>
-        <input formControlName="id" hidden>
+        <input formControlName="id" >
         <mat-form-field appearance="fill">
             <mat-label>Expence Type</mat-label>
             <input formControlName="name" matInput placeholder="Type">
@@ -14,8 +14,7 @@
             <mat-label>Description</mat-label>
             <textarea class="textarea" formControlName="desc" matInput
                 placeholder=" Description"></textarea>
-        </mat-form-field><br>
-        <input formControlName="admin_id_fk" ngModel={{admin_id}} readonly  hidden type="number">
+        </mat-form-field>
     </form>
 </div>
 <div mat-dialog-action [align]="'end'">
