--- a/src/app/admin/expencetype/expencetype.component.html
+++ b/src/app/admin/expencetype/expencetype.component.html
@@ -21,11 +21,11 @@
             </ng-container>
             <ng-container matColumnDef="name">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.emp_name}}</td>
+              <td class="data" mat-cell *matCellDef="let row">{{row.name}}</td>
             </ng-container>
             <ng-container matColumnDef="desc">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-              <td class="data" mat-cell *matCellDef="let row">{{row.desc}}</td>
+              <td class="data" mat-cell *matCellDef="let row">{{row.description }}</td>
             </ng-container>
                <ng-container matColumnDef="Action">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
