--- a/src/app/admin/add-expencetype/add-expencetype.component.html
+++ b/src/app/admin/add-expencetype/add-expencetype.component.html
@@ -4,7 +4,7 @@
 </mat-toolbar>
 <div mat-dialog-content>
     <form [formGroup]="expencetypeform" novalidate>
-        <input formControlName="id" >
+        <input formControlName="id"  readonly hidden>
         <mat-form-field appearance="fill">
             <mat-label>Expence Type</mat-label>
             <input formControlName="name" matInput placeholder="Type">
