--- a/src/app/admin/account/account.component.html
+++ b/src/app/admin/account/account.component.html
@@ -50,8 +50,8 @@
           </ng-container>
 
           <ng-container matColumnDef="remarks">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Remarks</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.remarks}}</td>
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+            <td class="data" mat-cell *matCellDef="let row">{{row.account_desc}}</td>
           </ng-container>
 
           <ng-container matColumnDef="Action">
