--- a/src/app/admin/add-edit-account/add-edit-account.component.css
+++ b/src/app/admin/add-edit-account/add-edit-account.component.css
@@ -7,6 +7,9 @@
     .column mat-form-field {
         width: 90%;
     }
+    .full_txtbox{
+        width: 96%;
+    }
 
     form {
         padding-left: 18px;
