--- a/src/app/admin/production/production.component.html
+++ b/src/app/admin/production/production.component.html
@@ -35,6 +35,14 @@
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.production_quantity}}</td>
             </ng-container>  
+            <ng-container matColumnDef="labor_cost">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Labor Cost</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.labor_cost}}</td>
+            </ng-container>  
+            <ng-container matColumnDef="total_amount">
+              <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Total Amount</th>
+              <td class="data" mat-cell *matCellDef="let row">{{row.total_amount}}</td>
+            </ng-container>  
             <ng-container matColumnDef="production_date">
               <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
               <td class="data" mat-cell *matCellDef="let row">{{row.production_date}}</td>
