--- a/src/app/admin/profit/profit.component.html
+++ b/src/app/admin/profit/profit.component.html
@@ -16,24 +16,44 @@
                 <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>S.N.</th>
                 <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
               </ng-container>    
-              <ng-container matColumnDef="product">
-                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
-                <td  class="data"mat-cell *matCellDef="let row">{{row.party_name}}</td>
+              <ng-container matColumnDef="sale_bill_no">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Bill No</th>
+                <td  class="data"mat-cell *matCellDef="let row">{{row.sale_bill_no}}</td>
               </ng-container> 
     
-              <ng-container matColumnDef="product_price">
-                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product Price</th>
-                <td  class="data"mat-cell *matCellDef="let row">{{row.party_mobile}}</td>
+              <ng-container matColumnDef="party">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
+                <td  class="data"mat-cell *matCellDef="let row">{{row.cust_name}}</td>
               </ng-container>
     
+              <ng-container matColumnDef="address">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.cust_shop_address}}</td>
+              </ng-container>
+    
+              <ng-container matColumnDef="product">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.product_name}}</td>
+              </ng-container>
+
               <ng-container matColumnDef="production_cost">
-                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Production Cost</th>
-                <td class="data" mat-cell *matCellDef="let row">{{row.party_address}}</td>
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Product Amount</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.product_cost_price}}</td>
               </ng-container>
-    
-              <ng-container matColumnDef="profit">
-                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Profit</th>
-                <td class="data" mat-cell *matCellDef="let row">{{row.party_contact_person}}</td>
+
+              <ng-container matColumnDef="sale_amount">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Sale Amount</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.sale_amount}}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="profit_amount">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Profit Amount</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.profit}}</td>
+              </ng-container>
+
+              <ng-container matColumnDef="date">
+                <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
+                <td class="data" mat-cell *matCellDef="let row">{{row.sale_date}}</td>
               </ng-container>
              
 
